--- a/styles.css
+++ b/styles.css
@@ -124,9 +124,9 @@ button:hover {
   padding-right: 35px; /* Espaço para o ícone */
 }
 
-.input-wrapper i {
+.input-wrapper #i {
   position: absolute;
-  right: 10px;
-  color: #555;
+  width: 18px;
+  right: 36px;
   pointer-events: none; /* Evita clique no ícone */
 }
